[shenker/cloning] Check for restriction sites in Marionette part cloning.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220824 Marionette parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220824 Marionette parts.ipynb
@@ -12,6 +12,7 @@
     "import requests\n",
     "import re\n",
     "import itertools as it\n",
+    "from tqdm.auto import tqdm\n",
     "import Bio.Restriction as Restriction\n",
     "from Bio.Seq import Seq\n",
     "from Bio.SeqRecord import SeqRecord"
@@ -620,6 +621,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Check for restriction sites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Restriction.Pa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enzymes = (Restriction.BsaI, Restriction.BsmBI, Restriction.BbsI, Restriction.AarI)#, Restriction.PaqCI)\n",
+    "for enz in enzymes:\n",
+    "    names_with_cuts = []\n",
+    "    for name, seq in cds_source_seqs.items():\n",
+    "        cuts = enzyme.re_search(seq, enz)\n",
+    "        if cuts:\n",
+    "            names_with_cuts.append(f\"{ajm_to_repressor[name]} ({name})\")\n",
+    "    print(f\"{enz} ({len(names_with_cuts)}): {', '.join(names_with_cuts)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## CDS primers"
    ]
   },
@@ -685,19 +718,19 @@
     "        (\n",
     "            (ajm_to_promoter[ajm], ajm_to_id[ajm], ajm, \"promoter\", seq)\n",
     "            for ajm, seq in promoter_source_seqs.items()\n",
-    "        )\n",
-    "        # (\n",
-    "        #     (ajm_to_repressor[ajm], ajm_to_id[ajm], ajm, \"cds\", seq)\n",
-    "        #     for ajm, seq in cds_source_seqs.items()\n",
-    "        # ),\n",
-    "        # (\n",
-    "        #     (ajm_to_aux[ajm], ajm_to_id[ajm], ajm, \"aux\", seq)\n",
-    "        #     for ajm, seq in aux_source_seqs.items()\n",
-    "        # ),\n",
+    "        ),\n",
+    "        (\n",
+    "            (ajm_to_repressor[ajm], ajm_to_id[ajm], ajm, \"cds\", seq)\n",
+    "            for ajm, seq in cds_source_seqs.items()\n",
+    "        ),\n",
+    "        (\n",
+    "            (ajm_to_aux[ajm], ajm_to_id[ajm], ajm, \"aux\", seq)\n",
+    "            for ajm, seq in aux_source_seqs.items()\n",
+    "        ),\n",
     "    )\n",
     ")\n",
     "\n",
-    "for name, id_, ajm, type_, source_seq in source_seqs_all:\n",
+    "for name, id_, ajm, type_, source_seq in tqdm(source_seqs_all):\n",
     "    if type_ == \"cds\":\n",
     "        variants = [\n",
     "            \"bicistronic\",\n",
@@ -714,7 +747,9 @@
     "        anneal_promoter = False\n",
     "        if type_ in (\"cds\", \"aux\"):\n",
     "            # TODO: squeeze?\n",
-    "            part_seq = workflow.normalize_seq(cds_flanks[0] + source_seq + cds_flanks[1])\n",
+    "            part_seq = workflow.normalize_seq(\n",
+    "                cds_flanks[0] + source_seq + cds_flanks[1]\n",
+    "            )\n",
     "            forward_overhang = storage_flanks[0] + cds_flanks[0]\n",
     "            forward_overhang = (\n",
     "                design.random_bases(num_random_bases, seed=forward_overhang)\n",
@@ -722,7 +757,9 @@
     "            )\n",
     "            if variant == \"bicistronic\":\n",
     "                # TODO: replace hard-coded squeeze with automatic squeeze\n",
-    "                part_seq = workflow.normalize_seq(part_seq[:-3] + bicistronic_placeholder)\n",
+    "                part_seq = workflow.normalize_seq(\n",
+    "                    part_seq[:-3] + bicistronic_placeholder\n",
+    "                )\n",
     "                reverse_overhang = sequence.reverse_complement(\n",
     "                    cds_flanks[1][:-3] + bicistronic_placeholder + storage_flanks[1]\n",
     "                )\n",
@@ -736,20 +773,26 @@
     "            )\n",
     "        elif type_ == \"promoter\":\n",
     "            oligo_name = f\"marionette_prom_{variant_name}\"\n",
-    "            part_seq = workflow.normalize_seq(promoter_overhangs[0] + source_seq + promoter_overhangs[1])\n",
+    "            part_seq = workflow.normalize_seq(\n",
+    "                promoter_overhangs[0] + source_seq + promoter_overhangs[1]\n",
+    "            )\n",
     "            forward_overhang = storage_flanks[0] + promoter_overhangs[0]\n",
     "            forward_overhang = (\n",
     "                design.random_bases(num_random_bases, seed=forward_overhang)\n",
     "                + forward_overhang\n",
     "            )\n",
     "            reverse_overhang = sequence.reverse_complement(\n",
-    "                    promoter_overhangs[1] + storage_flanks[1]\n",
-    "                )\n",
+    "                promoter_overhangs[1] + storage_flanks[1]\n",
+    "            )\n",
     "            reverse_overhang = (\n",
     "                design.random_bases(num_random_bases, seed=reverse_overhang)\n",
     "                + reverse_overhang\n",
     "            )\n",
-    "            annealed_seq = forward_overhang + source_seq + sequence.reverse_complement(reverse_overhang)\n",
+    "            annealed_seq = (\n",
+    "                forward_overhang\n",
+    "                + source_seq\n",
+    "                + sequence.reverse_complement(reverse_overhang)\n",
+    "            )\n",
     "            if len(annealed_seq) <= 100:\n",
     "                anneal_promoter = True\n",
     "        else:\n",
@@ -781,11 +824,16 @@
     "                    plib_maps[id_],\n",
     "                    forward_primer.seq,\n",
     "                    reverse_primer.seq,\n",
-    "                    min_score=(len(forward_primer.binding), len(reverse_primer.binding)),\n",
+    "                    min_score=(\n",
+    "                        len(forward_primer.binding),\n",
+    "                        len(reverse_primer.binding),\n",
+    "                    ),\n",
     "                )\n",
     "            except Exception as e:\n",
     "                if type_ == \"promoter\":\n",
-    "                    print(f\"{variant_name} ({id_}, {ajm}): got '{e}' when attempting PCR, falling back on annealed primers\")\n",
+    "                    print(\n",
+    "                        f\"{variant_name} ({id_}, {ajm}): got '{e}' when attempting PCR, falling back on annealed primers\"\n",
+    "                    )\n",
     "                    anneal_promoter = True\n",
     "                else:\n",
     "                    raise\n",
@@ -807,9 +855,7 @@
     "                    if variant == \"bicistronic\":\n",
     "                        description = f\"PCRs {id_} ({ajm}) to make golden gate CDS part for {name} followed by a bicistronic CDS placeholder.\"\n",
     "                    else:\n",
-    "                        description = (\n",
-    "                            f\"PCRs {id_} ({ajm}) to make golden gate CDS part for {name}.\"\n",
-    "                        )\n",
+    "                        description = f\"PCRs {id_} ({ajm}) to make golden gate CDS part for {name}.\"\n",
     "                elif type_ == \"promoter\":\n",
     "                    description = f\"PCRs {id_} ({ajm}) to make golden gate promoter part for {name}.\"\n",
     "                else:\n",
@@ -837,7 +883,10 @@
     "                primer_ids[variant_name] = (forward_primer_id, reverse_primer_id)\n",
     "                # plasmid_map\n",
     "                plasmid_seq = sequence.assemble(\n",
-    "                    [workflow.re_digest_part(pcr_seq, storage_enzyme), digested_storage_vector]\n",
+    "                    [\n",
+    "                        workflow.re_digest_part(pcr_seq, storage_enzyme),\n",
+    "                        digested_storage_vector,\n",
+    "                    ]\n",
     "                )\n",
     "                plasmid_command = f\"@GG({id_}<{forward_primer_id},{reverse_primer_id}>/{storage_enzyme}, {storage_vector_id}/{storage_enzyme})\"\n",
     "        if anneal_promoter:\n",
@@ -872,7 +921,10 @@
     "            primer_ids[variant_name] = (sense_primer_id, antisense_primer_id)\n",
     "            # plasmid_map\n",
     "            plasmid_seq = sequence.assemble(\n",
-    "                [workflow.re_digest_part(annealed_seq, storage_enzyme), digested_storage_vector]\n",
+    "                [\n",
+    "                    workflow.re_digest_part(annealed_seq, storage_enzyme),\n",
+    "                    digested_storage_vector,\n",
+    "                ]\n",
     "            )\n",
     "            plasmid_command = f\"@GG({sense_primer_id}={antisense_primer_id}/{storage_enzyme}, {storage_vector_id}/{storage_enzyme})\"\n",
     "        assert plasmid_seq.circular\n",
@@ -1001,7 +1053,7 @@
    "source": [
     "for name, oligo in olib_oligos.items():\n",
     "    if oligo[\"Name\"].startswith(\"marionette_prom\"):\n",
-    "        if len(oligo['Sequence']) > 60:\n",
+    "        if len(oligo[\"Sequence\"]) > 60:\n",
     "            print(f\"{name}\\t{oligo['Sequence']}\")"
    ]
   },
@@ -1024,6 +1076,38 @@
     "plib_plasmids.rollback()\n",
     "lib_strains.rollback()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pcr_seqs.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pcr_seqs[\"AM19_PhlFAM\"].seq_lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
