[shenker/cloning] WIP FP parts.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220928 FP parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220928 FP parts.ipynb
@@ -180,6 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get all Cluzel plasmids, even the ones we haven't ordered yet\n",
     "%%time\n",
     "addgene_publication = api.addgene.get_addgene(\n",
     "    \"https://www.addgene.org/browse/article/28192043/\"\n",
@@ -289,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clusters = workflow.cluster_sequences_by_prefix(insert_ends)\n",
+    "clusters = workflow.cluster_sequences_by_prefix(insert_ends, max_length=5)\n",
     "workflow.print_sequence_clusters(clusters)"
    ]
   },
@@ -297,7 +298,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Design primers"
+    "# Placeholders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bare placeholders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multimer fusion placeholders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FP fusion placeholders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Degradation placeholders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Primers"
    ]
   },
   {
