--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220912 Mosaic animation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220912 Mosaic animation.ipynb
@@ -223,8 +223,8 @@
     "num_t = nd2.sizes[\"t\"]\n",
     "# scale = [80,40,20,10,5,1]#it.repeat(80)\n",
     "#scale = np.geomspace(80, 0.1, 900)\n",
-    "scale = np.geomspace(0.5, 0.1, 60)\n",
-    "#scale = [0.15]\n",
+    "#scale = np.geomspace(0.5, 0.1, 60)\n",
+    "scale = [40]\n",
     "#scale = [0.333]\n",
     "# scale = it.repeat(0.1)\n",
     "# scale = it.repeat(0.4)\n",
@@ -234,7 +234,7 @@
     "timepoints = it.repeat(60)  # [20]  # [20,40,60,80]\n",
     "# timepoints = range(num_t)\n",
     "# timepoints = it.chain(range(num_t), range(num_t), range(num_t)) #[20]#[20, 40, 60]\n",
-    "offset = [0,0]#np.array([604, 354])\n",
+    "offset = [2000,1000]#[0,0]#np.array([604, 354])\n",
     "animation_delayed = mosaic.mosaic_animate_scale(\n",
     "    nd2_filename,\n",
     "    scale,\n",
@@ -305,7 +305,192 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[0])"
+    "plt.imshow(a[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = a[0].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ft = cv2.freetype.createFreeType2()\n",
+    "ft.loadFontData(fontFileName='fira/FiraSans-Medium.ttf', id=0)\n",
+    "#y = np.zeros_like(x, dtype=np.uint8)\n",
+    "y = np.zeros((800,600,3), dtype=np.uint8)\n",
+    "ft.putText(img=y,\n",
+    "           text='abc',\n",
+    "           org=(15, 15),\n",
+    "           fontHeight=101,\n",
+    "           color=(255, 100, 200),\n",
+    "           thickness=-1,\n",
+    "           line_type=cv2.LINE_AA,\n",
+    "           bottomLeftOrigin=False)\n",
+    "plt.imshow(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.unique(y[:,:,0] - y[:,:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y[:,:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(y[:,:,0],y[:,:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.unique(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.putText(x, \"\", \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cairo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = numpy.ndarray(shape=(height, width), dtype=numpy.uint32)\n",
+    "surface = cairo.ImageSurface.create_for_data(data, cairo.FORMAT_ARGB32, width, height)\n",
+    "cr = cairo.Context(surface)\n",
+    "\n",
+    "cr.scale(200, 100)\n",
+    "cr.set_line_width(0.04)\n",
+    "\n",
+    "cr.select_font_face(\"Sans\", cairo.FONT_SLANT_NORMAL,\n",
+    "                    cairo.FONT_WEIGHT_BOLD)\n",
+    "cr.set_font_size(0.35)\n",
+    "\n",
+    "cr.move_to(0.04, 0.53)\n",
+    "cr.show_text(\"Hello\")\n",
+    "\n",
+    "cr.move_to(0.27, 0.65)\n",
+    "cr.text_path(\"void\")\n",
+    "cr.set_source_rgb(0.5, 0.5, 1)\n",
+    "cr.fill_preserve()\n",
+    "cr.set_source_rgb(0, 0, 0)\n",
+    "cr.set_line_width(0.01)\n",
+    "cr.stroke()\n",
+    "\n",
+    "# draw helping lines\n",
+    "cr.set_source_rgba(1, 0.2, 0.2, 0.6)\n",
+    "cr.arc(0.04, 0.53, 0.02, 0, 2 * np.pi)\n",
+    "cr.arc(0.27, 0.65, 0.02, 0, 2 * np.pi)\n",
+    "cr.fill()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = surface.map_to_image?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.asarray(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.zeros((1024,512,3))\n",
+    "y = mosaic.square_overlay(x, 1, 8.5, font=font)\n",
+    "plt.figure(figsize=(20,20))\n",
+    "plt.imshow(y)"
    ]
   },
   {
