[shenker/image_analysis] Backported mask_measurements fix from 220818 New architecture for Quansight notebook.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220815 New architecture.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220815 New architecture.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext pyinstrument"
+    "#%load_ext pyinstrument"
    ]
   },
   {
@@ -552,7 +552,7 @@
    "source": [
     "segmentation_channel = \"RFP-Penta\"\n",
     "trench_detection_channel = segmentation_channel  # channel for trench detection, almost always same as segmentation_channel\n",
-    "measure_channels = [\"RFP-Penta\", \"GFP-PENTA\"]\n",
+    "measure_channels = [\"RFP-Penta\", \"YFP-DUAL\"]\n",
     "fish_channels = [\"RFP-Penta\", \"Cy5-PENTA\", \"Cy7\"]"
    ]
   },
@@ -660,8 +660,11 @@
     "            segmentation_key = (\"segmentation\", fov_num, t, segmentation_channel)\n",
     "            segmentation = pipeline.array.get(segmentation_key)\n",
     "            if segmentation is not None:\n",
-    "                # if we have segmentation masks for this frame, we can immediately segment only this frame\n",
-    "                keys_to_measure = [crop_key]\n",
+    "                # if we have segmentation masks for this frame, we can immediately measure only this frame\n",
+    "                if crop_key[-1] in measure_channels:\n",
+    "                    keys_to_measure = [crop_key]\n",
+    "                else:\n",
+    "                    keys_to_measure = []\n",
     "            else:\n",
     "                # we don't have a segmentation mask yet, so we need to add to the keys_to_measure list\n",
     "                keys_to_measure = pipeline.state.setdefault((\"keys_to_measure\", fov_num, t), [])\n",
@@ -675,7 +678,7 @@
     "                    )\n",
     "                    pipeline.array[segmentation_key] = segmentation\n",
     "                    # once we have the segmentation mask, get measurements for the mask\n",
-    "                    pipeline.table[(\"measurements\", *crop_key[1:],)] = pipeline.delayed(\n",
+    "                    pipeline.table[(\"mask_measurements\", *crop_key[1:],)] = pipeline.delayed(\n",
     "                        measure_mask_crops\n",
     "                    )(segmentation)\n",
     "            segmentation = pipeline.array.get(segmentation_key)\n",
@@ -720,13 +723,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#n = nd2reader.ND2Reader(\"/home/jqs1/scratch/jqs1/microscopy/220718/RBS_DEG_library_20x.nd2\")\n",
+    "n = nd2reader.ND2Reader(\"/home/jqs1/scratch/jqs1/microscopy/220523/220523_library_test_smallfile.nd2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n.metadata[\"channels\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
+    "#filename = \"/home/jqs1/scratch/jqs1/microscopy/220718/RBS_DEG_library_20x.nd2\"\n",
+    "filename = \"/home/jqs1/scratch/jqs1/microscopy/220523/220523_library_test_smallfile.nd2\"\n",
     "pipeline = Pipeline(\"/home/jqs1/scratch/jqs1/microscopy/220718/new_architecture/test1\")\n",
     "for msg in new.readers.send_nd2(\n",
-    "    \"/home/jqs1/scratch/jqs1/microscopy/220718/RBS_DEG_library_20x.nd2\",\n",
-    "    slices=dict(v=slice(1), t=slice(1)),\n",
+    "    filename,\n",
+    "    #slices=dict(v=slice(1), t=slice(1)),\n",
     "):\n",
     "    handle_message(pipeline, msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline.table"
    ]
   },
   {
@@ -1024,7 +1057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
