[shenker/image_analysis] Change to correct channel names in Quansight new architecture notebook.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220818 New architecture for Quansight.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220818 New architecture for Quansight.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Imports"
    ]
@@ -64,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext pyinstrument"
+    "#%load_ext pyinstrument"
    ]
   },
   {
@@ -143,7 +145,7 @@
    "source": [
     "segmentation_channel = \"RFP-Penta\"\n",
     "trench_detection_channel = segmentation_channel  # channel for trench detection, almost always same as segmentation_channel\n",
-    "measure_channels = [\"RFP-Penta\", \"GFP-PENTA\"]\n",
+    "measure_channels = [\"RFP-Penta\", \"YFP-DUAL\"]\n",
     "fish_channels = [\"RFP-Penta\", \"Cy5-PENTA\", \"Cy7\"]"
    ]
   },
@@ -314,6 +316,32 @@
     "        case _:\n",
     "            # this exception should be caught, we don't want malformed messages to crash the pipeline\n",
     "            raise ValueError(\"cannot handle message\", msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "#filename = \"/home/jqs1/scratch/jqs1/microscopy/220718/RBS_DEG_library_20x.nd2\"\n",
+    "filename = \"/home/jqs1/scratch/jqs1/microscopy/220523/220523_library_test_smallfile.nd2\"\n",
+    "pipeline = Pipeline(\"/home/jqs1/scratch/jqs1/microscopy/220718/new_architecture/test1\")\n",
+    "for msg in new.readers.send_nd2(\n",
+    "    filename,\n",
+    "    slices=dict(v=slice(1), t=slice(1)),\n",
+    "):\n",
+    "    handle_message(pipeline, msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline.table"
    ]
   },
   {
@@ -529,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
