[shenker/image_analysis] Noticed stage drift for plasmid loss experiment, need to correct.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/221103 Plasmid loss.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/221103 Plasmid loss.ipynb
@@ -146,6 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "drift_correction_channel = \"Phase-Fluor\"\n",
     "segmentation_channel = \"RFP-PENTA\"\n",
     "trench_detection_channel = segmentation_channel  # channel for trench detection, almost always same as segmentation_channel\n",
     "measure_channels = [\"RFP-PENTA\", \"GFP-PENTA\"]\n",
@@ -579,6 +580,78 @@
    "outputs": [],
    "source": [
     "pd.melt(d.reset_index(\"channel\"), id_vars=[\"channel\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Drift correction test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2 = nd2reader.ND2Reader(\"/home/jqs1/scratch/jqs1/microscopy/210511/RBS_ramp.nd2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2.sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1 = nd2.get_frame_2D(v=30,t=0, c=0)\n",
+    "f2 = nd2.get_frame_2D(v=30,t=150, c=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skimage.registration import optical_flow_ilk, optical_flow_tvl1, phase_cross_correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phase_cross_correlation(f1, f2, return_error=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(30,30))\n",
+    "plt.imshow(f1-f2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(f1)"
    ]
   },
   {
