[shenker/cloning] Checked which terminators are included in Voigt double-terminators, slight update to terminators notebook.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210720 Terminators.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210720 Terminators.ipynb
@@ -205,8 +205,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from requests_html import HTMLSession"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session = HTMLSession()\n",
+    "r = session.get(\"https://academic.oup.com/synbio/article/4/1/ysz026/5609127\")\n",
+    "hudson_url = r.html.find(\"div.dataSuppLink > a\", first=True).attrs[\"href\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!mkdir -p data/2019hudson_supp\n",
-    "!curl -b does_not_exist -Lo data/2019hudson_supp.zip \"https://oup.silverchair-cdn.com/oup/backfile/Content_public/Journal/synbio/4/1/10.1093_synbio_ysz026/2/ysz026_supplementary_data.zip?Expires=1625620668&Signature=ce7~qRkVxcwAzjs98YDSNU03XBjhxBoyL6Mr2RsQEordmOg8N8Fh5u0trhiAxYSZtzbF~U~x2DjUG5dEYLjtMiF-YTejDIOMqtPdmVd6-n4WK5wn02j8JS3whJt57SL6fCAYAlcBiVKPyPH-tTyctP84SK6v8~zjS07hmob6LY-MmBt-XDgaTMiks6Pqkw3yUfnaUZP4IbXnO0Nt~p5uFlE~iStyoaTz~Y4uGvLSjcA2YUmiCvUVQOlNVcXwPMpHkot6CnD0~ZhKMxE8w4dYhGs4DJk2xsrecIfKHS1WCWzyd6N20lAB43hHQNQEKr61oNSazYD9rCRfGIckt5Uepg__&Key-Pair-Id=APKAIE5G5CRDK6RD3PGA\""
+    "!curl -b does_not_exist -Lo data/2019hudson_supp.zip \"$hudson_url\""
    ]
   },
   {
@@ -830,6 +850,17 @@
    "outputs": [],
    "source": [
     "show_heatmap(strong_all_sim[[\"pheA-1\", \"ECK120015440\", \"ECK120010799\", \"ECK120010855\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_heatmap(\n",
+    "    strong_all_sim[[\"L3S2P55\", \"L3S2P11\", \"L3S2P21\"]]\n",
+    ")"
    ]
   },
   {
@@ -1500,7 +1531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
