[cloning,shenker/cloning] Changed cut_upstream bool to cut_direction enum. Also mostly implemented insert_cds_part_flank but needs to be finished and tested.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/230102 FP deg+bicistronic.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/230102 FP deg+bicistronic.ipynb
@@ -225,7 +225,8 @@
     "# part_names = [\"sigW\", \"rsiW\", \"ECF20_992\", \"AS20_992\", \"sfGFP\"]  # TODO: pick correct FPs\n",
     "#part_names = [\"AM19_LacIAM\"]#, \"AM19_TetR\"]\n",
     "#part_names = [\"AM19_TetR\"]\n",
-    "part_names = [\"mScarlet-I\"]"
+    "#part_names = [\"mScarlet-I\"]\n",
+    "part_names = [\"sigW\"]"
    ]
   },
   {
@@ -235,10 +236,20 @@
    "outputs": [],
    "source": [
     "degtag_placeholder = degtag_prefix + design.golden_gate_placeholder(\n",
-    "    placeholder_enzyme, None, *degtag_overhangs\n",
+    "#    placeholder_enzyme, None, *degtag_overhangs\n",
+    "    Restriction.BsaI, None, *degtag_overhangs\n",
     ")\n",
     "# remove downstream overhang because it is already in the storage vector\n",
     "degtag_placeholder = degtag_placeholder[: -len(degtag_overhangs[1])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degtag_placeholder"
    ]
   },
   {
@@ -266,8 +277,8 @@
     "}\n",
     "\n",
     "plasmid_base = {\n",
-    "    \"Origin\": \"pUC\",\n",
-    "    \"Marker\": \"amp\",\n",
+    "    #\"Origin\": \"pUC\",\n",
+    "    #\"Marker\": \"amp\",\n",
     "    #\"Reference\": reference,\n",
     "}\n",
     "\n",
@@ -275,7 +286,7 @@
     "    \"Species\": \"E. coli\",\n",
     "    \"Background\": \"MG1655\",\n",
     "    \"Parent\": \"MG1655\",\n",
-    "    \"Marker\": \"amp\",\n",
+    "    #\"Marker\": \"amp\",\n",
     "}\n",
     "\n",
     "fragment_base = {\n",
@@ -290,14 +301,14 @@
     "# plasmid_description = f\"Golden gate part for Adam Meyer's {name} CDS followed by a bicistronic CDS placeholder.\"\n",
     "# part_description = f\"Adam Meyer's {name} CDS followed by a bicistronic CDS placeholder. Sequence taken unmodified from color-coded region in the supplemental information for Meyer 2019. Sequences PCRed from {id_} ({ajm}).\"\n",
     "descriptions = dict(oligo=\"\", plasmid=\"\", fragment=\"\")\n",
-    "flank = \"ggggggggg\"\n",
+    "#flank = \"ggggggggg\"\n",
+    "flank = degtag_placeholder\n",
     "\n",
     "for part_name in part_names:\n",
     "    workflow.insert_cds_part_flank(\n",
     "        f\"{part_name}+ClpXP_tag\",\n",
     "        part_name,\n",
     "        flank,\n",
-    "        f\"degtag_ph_{part_name}\",\n",
     "        part_type,\n",
     "        part_enzyme,\n",
     "        descriptions,\n",
@@ -314,7 +325,6 @@
     "        tm_binding=tm_binding,\n",
     "        tm_homology=tm_homology,\n",
     "        min_mfe=min_mfe,\n",
-    "        overwrite=True,\n",
     "    )"
    ]
   },
