--- a/paulssonlab/src/paulssonlab/shenker/cloning/230104 Orthogonal RBS libraries.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/230104 Orthogonal RBS libraries.ipynb
@@ -119,7 +119,8 @@
     "orig_rbs_names = [\"B0033m_BC\", \"B0032m_BC\", \"B0034m_BC\"]\n",
     "part_type = \"5UTR_2\"\n",
     "part_overhangs = workflow.overhangs_for(part_types[part_type])\n",
-    "insert_part_types = [\"5UTR_2b\", \"5UTR_2c\"]\n",
+    "placeholder_insert_part_types = [\"5UTR_2b\", \"5UTR_2c\"]\n",
+    "insert_part_types = [\"5UTR_2\", \"5UTR_2b\", \"5UTR_2c\"]\n",
     "part_enzyme = Restriction.BsaI\n",
     "insert_enzymes = [Restriction.BbsI]\n",
     "library_reverse_primer_id = \"oLIB46\"\n",
@@ -250,27 +251,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for insert_enzyme, insert_part_type in product(insert_enzymes, insert_part_types):\n",
+    "orig_bbsi_placeholder_seqs = enzyme.re_digest(reg.get(\"RBS_placeholder_BbsI\")[\"_seq\"], Restriction.BsaI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orig_bbsi_placeholder_seqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.re_digest_part(reg.get(\"RBS_placeholder_BbsI\")[\"_seq\"], Restriction.BsaI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for insert_enzyme, insert_part_type in product(insert_enzymes, placeholder_insert_part_types):\n",
     "    insert_overhangs = workflow.overhangs_for(part_types[insert_part_type])\n",
-    "    seq = insert_overhangs[0] + sequence.reverse_complement(\n",
-    "        design.type2s_with_spacer(insert_enzyme, len(insert_overhangs[0]))\n",
-    "    )\n",
-    "    seq += (\n",
-    "        design.random_bases(2 * num_random_bases, seed=seq)\n",
-    "        + design.type2s_with_spacer(insert_enzyme, len(insert_overhangs[1]))\n",
-    "        + insert_overhangs[1]\n",
-    "    )\n",
-    "    seq = (\n",
-    "        design.type2s_with_spacer(part_enzyme, len(part_overhangs[0]))\n",
-    "        + part_overhangs[0]\n",
-    "        + seq\n",
-    "        + part_overhangs[1]\n",
-    "        + sequence.reverse_complement(\n",
-    "            design.type2s_with_spacer(part_enzyme, len(part_overhangs[1]))\n",
-    "        )\n",
-    "    )\n",
-    "    seq = design.random_bases(num_random_bases, seed=seq) + seq\n",
-    "    seq = seq + design.random_bases(num_random_bases, seed=seq)\n",
+    "    if insert_enzyme == Restriction.BbsI:\n",
+    "        seq = orig_bbsi_placeholder_seqs[0].fill_in() + insert_overhangs[0] + orig_bbsi_placeholder_seqs[1].trim_overhangs() + insert_overhangs[1] + orig_bbsi_placeholder_seqs[2].fill_in()\n",
+    "    else:\n",
+    "        raise NotImplementedError\n",
+    "    # seq = insert_overhangs[0] + sequence.reverse_complement(\n",
+    "    #     design.type2s_with_spacer(insert_enzyme, len(insert_overhangs[0]))\n",
+    "    # )\n",
+    "    # seq += (\n",
+    "    #     design.random_bases(2 * num_random_bases, seed=seq)\n",
+    "    #     + design.type2s_with_spacer(insert_enzyme, len(insert_overhangs[1]))\n",
+    "    #     + insert_overhangs[1]\n",
+    "    # )\n",
+    "    # seq = (\n",
+    "    #     design.type2s_with_spacer(part_enzyme, len(part_overhangs[0]))\n",
+    "    #     + part_overhangs[0]\n",
+    "    #     + seq\n",
+    "    #     + part_overhangs[1]\n",
+    "    #     + sequence.reverse_complement(\n",
+    "    #         design.type2s_with_spacer(part_enzyme, len(part_overhangs[1]))\n",
+    "    #     )\n",
+    "    # )\n",
+    "    # seq = design.random_bases(num_random_bases, seed=seq) + seq\n",
+    "    # seq = seq + design.random_bases(num_random_bases, seed=seq)\n",
     "    seq = workflow.normalize_seq(seq)\n",
     "    insert_type_name = insert_part_type.replace(\"5UTR_2\", \"RBS\")\n",
     "    placeholder_name = f\"{insert_type_name}_placeholder_{insert_enzyme}\"\n",
@@ -326,6 +358,15 @@
     "rbs_library_seqs = {\n",
     "    name: reg.get(name)[\"_seq\"].trim_overhangs() for name in old_rbs_library_names\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rbs_library_seqs[\"Strong_Weiss_RBS_library\"]"
    ]
   },
   {
