[shenker/cloning] Bugfixes to marionette parts notebook.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220824 Marionette parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220824 Marionette parts.ipynb
@@ -630,15 +630,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Restriction.Pa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "enzymes = (Restriction.BsaI, Restriction.BsmBI, Restriction.BbsI, Restriction.AarI)#, Restriction.PaqCI)\n",
     "for enz in enzymes:\n",
     "    names_with_cuts = []\n",
@@ -956,25 +947,28 @@
     "        if anneal_promoter:\n",
     "            usage += f\",{primer_ids[variant_name][0]}={primer_ids[variant_name][1]}/{part_enzyme}\"\n",
     "        if type_ == \"promoter\":\n",
+    "            part_type = \"Promoter_AB\"\n",
     "            part_description = f\"Adam Meyer's {name} promoter. Sequence taken unmodified from color-coded region in the supplemental information for Meyer 2019.\"\n",
     "            if not anneal_promoter:\n",
     "                part_description += f\" Sequences PCRed from {id_} ({ajm}).\"\n",
     "            if ajm in extra_promoter_description:\n",
     "                part_description += f\" {extra_promoter_description[ajm]}\"\n",
     "        else:\n",
+    "            part_type = \"CDS_CD\"\n",
     "            if variant == \"bicistronic\":\n",
     "                part_description = f\"Adam Meyer's {name} CDS followed by a bicistronic CDS placeholder. Sequence taken unmodified from color-coded region in the supplemental information for Meyer 2019. Sequences PCRed from {id_} ({ajm}).\"\n",
     "            else:\n",
     "                part_description = f\"Adam Meyer's {name} CDS. Sequence taken unmodified from color-coded region in the supplemental information for Meyer 2019. Sequences PCRed from {id_} ({ajm}).\"\n",
+    "        part_overhangs = workflow.overhangs_for(part_types[part_type])\n",
     "        part_row = {\n",
     "            **part_base,\n",
     "            \"Name\": variant_name,\n",
     "            \"Description\": part_description,\n",
     "            \"Sequence\": part_seq,\n",
     "            \"Usage\": usage,\n",
-    "            \"Type\": cds_part_type,\n",
-    "            \"Upstream overhang\": promoter_overhangs[0],\n",
-    "            \"Downstream overhang\": promoter_overhangs[1],\n",
+    "            \"Type\": part_type,\n",
+    "            \"Upstream overhang\": part_overhangs[0],\n",
+    "            \"Downstream overhang\": part_overhangs[1],\n",
     "        }\n",
     "        flib_fragments.upsert(part_row, apply=apply, overwrite=overwrite)"
    ]
@@ -1099,7 +1093,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcr_seqs[\"AM19_PhlFAM\"].seq_lower()"
+    "pcr_seqs[\"AM19_VanRAM_bicistronic\"].seq_lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "part_seqs[\"AM19_BetIAM_bicistronic\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(Seq(part_seqs[\"AM19_VanRAM\"][1:-3]).translate())"
    ]
   },
   {
