[shenker/cloning,cloning/commands] WIP NAO strain ingest. @Digest command can now return multiple sequences instead of the single result returned by re_digest_part.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/230207 NAO strains ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/230207 NAO strains ingest.ipynb
@@ -99,7 +99,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Double Terminators"
+    "# Ingest missing parts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Double Terminators"
    ]
   },
   {
@@ -190,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RiboJs"
+    "## RiboJs"
    ]
   },
   {
@@ -252,6 +259,68 @@
    "outputs": [],
    "source": [
     "plib_maps.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(reg.get(\"fLIB255\")[\"_seq\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = reg.get(\"mKate2_nocut\")\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(s[\"_seq\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s[\"_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = reg.get(\"pLIB112\")[\"_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.eval_expr(\"pLIB112/AarI/BbsI\")"
    ]
   },
   {
@@ -580,6 +649,57 @@
    "source": [
     "res"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GG test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import paulssonlab.cloning.design as design"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "design.golden_gate_placeholder?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _make_frag(overhang1, overhang2):\n",
+    "    return enzyme.re_digest(design.golden_gate_placeholder(Restriction.BsaI, Restriction.BbsI, overhang1, overhang2), Restriction.BbsI)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(_make_frag(\"aaaa\", \"gggg\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
