[cloning,shenker/cloning] Added ab1 import to cloning.io. BioPython does not support ab1 export.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/230213 Manual barcode alignment.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/230213 Manual barcode alignment.ipynb
@@ -217,7 +217,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq_files = sorted(list(Path(\"/Users/Jacob/Downloads/X4LSJG_results/X4LSJG_genbank_files\").glob(\"*.gbk\")))"
+    "#seq_files = Path(\"/Users/Jacob/Downloads/X4LSJG_results/X4LSJG_genbank_files\").glob(\"*.gbk\")\n",
+    "seq_files = Path(\"/Users/jacob/Downloads/220304_Eaton_BCs_30-666511268_ab1\").glob(\"*.ab1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq_files = sorted(list(seq_files))"
    ]
   },
   {
@@ -236,15 +246,6 @@
    "outputs": [],
    "source": [
     "sub_matrix = parasail.matrix_create(\"acgt\", 1, -2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "probe_set_df[\"Name\"].values + placeholder_set_df[\"Name\"].values"
    ]
   },
   {
