[shenker/snakenbake] Transitioned from gdspy to gdstk. Everything works except for text, which is temporarily disabled.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -3,12 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import gdspy\n",
+    "import gdstk\n",
     "import matplotlib.pyplot as plt\n",
     "from cytoolz import dissoc\n",
     "\n",
@@ -19,21 +21,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import snakenbake as s\n",
     "import fov\n",
-    "import fluid\n",
-    "from geometry import Cell, Round"
+    "import fluid"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pint\n",
@@ -44,16 +49,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "camera_dims = {\n",
     "    \"iris\": (4.25, np.array([5056, 2960])),\n",
     "    \"bsi\": (6.5, np.array([2048, 2048])),\n",
     "}\n",
-    "# mags = (20, 40, 60, 100)\n",
     "mags = (20, 40)\n",
-    "# mags = (40,)\n",
     "fov_dims = {}\n",
     "for camera, (pixel_size, fov_dim) in camera_dims.items():\n",
     "    for mag in mags:\n",
@@ -63,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def print_flow_info(height, Q_per_snake, mu, nu, metadata):\n",
@@ -102,7 +109,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "coverslip_dims = np.array([55e3, 24e3])\n",
@@ -114,7 +123,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10, 5))\n",
@@ -131,12 +142,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%time\n",
     "metadata = {}\n",
     "base_params = dict(\n",
+    "    label=False, # TODO!!!\n",
     "    design_func=s.snake,\n",
     "    dims=chip_dims,\n",
     "    split=8,\n",
@@ -157,7 +171,7 @@
     "    #     chip_id=0,\n",
     "    #     mark_size=2,\n",
     "    #     mark_spacing=1.5,\n",
-    "    draw_trenches=True,\n",
+    "    trenches=True,\n",
     "    metadata=metadata,\n",
     ")\n",
     "manifold_params = dissoc(\n",
@@ -166,7 +180,6 @@
     "        **dict(\n",
     "            design_func=s.manifold_snake,\n",
     "            manifold_input_style=\"bend-in\",\n",
-    "            dims=chip_dims,\n",
     "            split=None,\n",
     "            num_manifolds=1,\n",
     "            manifold_width=200,\n",
@@ -218,7 +231,7 @@
     "#     trench_spacing=2.1,\n",
     "# )\n",
     "\n",
-    "params = [dense_chip]*4 #[dense_chip, workhorse, workhorse, workhorse, workhorse_poormedia, dense_chip]\n",
+    "params = [dense_chip]*3 #[dense_chip, workhorse, workhorse, workhorse, workhorse_poormedia, dense_chip]\n",
     "params = [{**manifold_params, **p} for p in params]\n",
     "# chip names\n",
     "chip_names = [\n",
@@ -259,23 +272,29 @@
     ")\n",
     "# lay out wafer, output design\n",
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
+    "wafer_diameter = 3 * u.inch\n",
+    "alignment_mark_position = wafer_diameter / 2 - 0.2 * u.inch\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk\\n JQS/DE/YG 220629\",\n",
+    "    text_right=\"Basilisk\\n JQS/DE/YG 230320\",\n",
     "    text_left=wafer_manifest,\n",
-    "    text=True,\n",
+    "    # TODO!!!\n",
+    "    text=False, #True,\n",
     "    mask=False,\n",
     "    chip_dims=chip_dims,\n",
-    "    diameter=(3 * u.inch).to(u.um).magnitude,\n",
-    "    alignment_mark_position=40e3,\n",
+    "    diameter=wafer_diameter.to(u.um).magnitude,\n",
+    "    alignment_mark_position=alignment_mark_position.to(u.um).magnitude,\n",
     ")\n",
-    "s.write_gds(main_cell, \"designs/220629basilisk.gds\")"
+    "MAX_POINTS = 2000  # LayoutEditor uses 8191, gdstk default is 199\n",
+    "s.write_gds(main_cell, \"designs/230320basilisk.gds\", max_points=MAX_POINTS)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "print(wafer_manifest)"
@@ -284,7 +303,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "{k: v[\"num_trenches\"] for k, v in metadata.items()}"
@@ -293,7 +314,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "{k: v[\"num_lanes\"] for k, v in metadata.items()}"
@@ -302,7 +325,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "Q_per_snake = 20 * u.uL / u.min\n",
@@ -315,7 +340,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "Q_per_snake = 20 * u.uL / u.min\n",
@@ -328,7 +355,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "grid_df.loc[pd.IndexSlice[:, [\"iris 40x\", \"bsi 40x\"]], :].round(2)"
@@ -337,16 +366,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "grid_df.loc[pd.IndexSlice[:, [\"iris 20x\", \"bsi 20x\"]], :].round(2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -360,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
